[package]
name = "lit-vek"
version = "0.1.0"
edition = "2021"
description = "iter! and vek! macros for nicer literal syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jpetkau/lit-vek"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
